--- a/classifier/BaselineModels_LocalRun.ipynb
+++ b/classifier/BaselineModels_LocalRun.ipynb
@@ -3016,16 +3016,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "rf = RandomForestClassifier(max_depth=2, random_state=0)\n",
     "rf.fit(X, y)\n",
-    "rf_predictions = lp_classifier.predict(X_test)\n",
-    "print(\"Accuracy = \",accuracy_score(y_test,lp_predictions.toarray()))\n",
-    "print(\"F1 score = \",f1_score(y_test,lp_predictions, average=\"micro\"))\n",
-    "print(\"Hamming loss = \",hamming_loss(y_test,lp_predictions))"
+    "rf_predictions = rf.predict(X_test)\n",
+    "print(\"Accuracy = \",accuracy_score(y_test,rf_predictions.toarray()))\n",
+    "print(\"F1 score = \",f1_score(y_test,rf_predictions, average=\"micro\"))\n",
+    "print(\"Hamming loss = \",hamming_loss(y_test,rf_predictions))"
    ]
   },
   {
